mudando foto de compartilhamento de link e add console.log

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
       name="description"
       content="Escalix - Gerenciador de escalas de serviços"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logoZSPardal.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logoIconProducao.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
     <!-- Pré-carregamento das imagens -->
