ajustando imagens e logos

--- a/public/index.html
+++ b/public/index.html
@@ -9,12 +9,8 @@
       name="description"
       content="Escalix - Gerenciador de escalas de serviços"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logoIconProducao.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/iconLogoZs.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-
-    <!-- Pré-carregamento das imagens -->
-    <link rel="preload" href="%PUBLIC_URL%/img/zs-pastor.jpg" as="image" />
-    <link rel="preload" href="%PUBLIC_URL%/img/zs-vini.png" as="image" />
 
     <!-- Definindo o background no CSS -->
     <style>
